--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="row">
 				<div class="col-sm-5 col-sm-push-2">
 					<div class="po_imbox">
-						<img src="" alt="" class="po_img">
+						<img src="img/Group 2.png" alt="" class="po_img">
 						<h2 class="hi_box">Hi,<br>I'm FiFi</h2>
 					</div>
 				</div>
@@ -300,13 +300,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="row">
+<!-- 					<div class="row">
 						<div class="col-sm-8  col-sm-push-2">
 							<div class="imbox">
 								<a href="img/Original/IMTS RWD.jpg" data-fancybox="gallery1"><img src="img/Frame 1 (1).jpg" alt=""></a>
 							</div>
 						</div>
-					</div>	
+					</div>	 -->
 					<div class="row">
 						<div class="col-sm-8 col-sm-push-2">
 							<h4 class="work_title">執行專案 ─ 全球線上聯展</h4>
